--- a/Fomalhaut2/Base.lproj/Main.storyboard
+++ b/Fomalhaut2/Base.lproj/Main.storyboard
@@ -543,9 +543,6 @@
                                                 <action selector="updateCollectionViewStyle:" target="89S-Z6-qTv" id="7HY-2g-bzZ"/>
                                             </connections>
                                         </segmentedCell>
-                                        <attributedString key="userComments">
-                                            <fragment content="CollectionStyleSegment"/>
-                                        </attributedString>
                                     </segmentedControl>
                                     <attributedString key="userComments">
                                         <fragment content="CollectionStyleItem"/>
@@ -608,7 +605,7 @@
                                             <constraint firstAttribute="width" constant="180" id="b1Z-Xi-hoc"/>
                                         </constraints>
                                         <connections>
-                                            <segue destination="9Hh-1Z-vTn" kind="embed" id="YSv-XL-hxX"/>
+                                            <segue destination="09g-aA-dKs" kind="embed" id="MFM-C2-nnX"/>
                                         </connections>
                                     </containerView>
                                     <containerView translatesAutoresizingMaskIntoConstraints="NO" id="w6T-EY-I3d">
@@ -652,122 +649,13 @@
             </objects>
             <point key="canvasLocation" x="64" y="580"/>
         </scene>
-        <!--Filter List View Controller-->
-        <scene sceneID="2df-lm-l8R">
+        <!--FilterList-->
+        <scene sceneID="7zu-cS-q97">
             <objects>
-                <viewController id="9Hh-1Z-vTn" customClass="FilterListViewController" customModule="Fomalhaut2" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="OHa-lK-nre">
-                        <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" horizontalScrollElasticity="none" translatesAutoresizingMaskIntoConstraints="NO" id="cVW-QY-am4">
-                                <rect key="frame" x="0.0" y="0.0" width="180" height="300"/>
-                                <clipView key="contentView" drawsBackground="NO" id="G3p-nu-olX">
-                                    <rect key="frame" x="1" y="1" width="178" height="298"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                    <subviews>
-                                        <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" typeSelect="NO" autosaveName="FilterListView" rowHeight="20" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="6" outlineTableColumn="nV8-QU-5fY" id="L4y-LK-hH3" customClass="FilterListView" customModule="Fomalhaut2" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="178" height="298"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                            <size key="intercellSpacing" width="3" height="2"/>
-                                            <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
-                                            <tableColumns>
-                                                <tableColumn width="175" minWidth="16" maxWidth="1000" id="nV8-QU-5fY">
-                                                    <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
-                                                        <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                                    </tableHeaderCell>
-                                                    <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="Rxg-5Z-lln">
-                                                        <font key="font" metaFont="system"/>
-                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                                    </textFieldCell>
-                                                    <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
-                                                    <prototypeCellViews>
-                                                        <tableCellView identifier="HeaderCell" id="Yjy-ci-2e9">
-                                                            <rect key="frame" x="1" y="1" width="175" height="17"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dnv-ta-gsV">
-                                                                    <rect key="frame" x="0.0" y="1" width="175" height="14"/>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="HEADER CELL" id="Jcs-R0-XaN">
-                                                                        <font key="font" metaFont="smallSystemBold"/>
-                                                                        <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstAttribute="trailing" secondItem="dnv-ta-gsV" secondAttribute="trailing" constant="2" id="L5D-Gp-Tsy"/>
-                                                                <constraint firstItem="dnv-ta-gsV" firstAttribute="leading" secondItem="Yjy-ci-2e9" secondAttribute="leading" constant="2" id="fkw-OG-zRr"/>
-                                                                <constraint firstItem="dnv-ta-gsV" firstAttribute="top" secondItem="Yjy-ci-2e9" secondAttribute="top" constant="2" id="nvN-7I-wFZ"/>
-                                                                <constraint firstAttribute="bottom" secondItem="dnv-ta-gsV" secondAttribute="bottom" constant="1" id="z1v-id-eUC"/>
-                                                            </constraints>
-                                                            <connections>
-                                                                <outlet property="textField" destination="dnv-ta-gsV" id="Kzx-3z-exP"/>
-                                                            </connections>
-                                                        </tableCellView>
-                                                        <tableCellView identifier="DataCell" id="bJd-xS-TCh">
-                                                            <rect key="frame" x="1" y="20" width="175" height="20"/>
-                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                                            <subviews>
-                                                                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nuI-xn-2dn">
-                                                                    <rect key="frame" x="8" y="0.0" width="167" height="20"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="20" id="DCw-Zg-gs4"/>
-                                                                    </constraints>
-                                                                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" alignment="left" title="Table View Cell" id="AlB-aY-PJl">
-                                                                        <font key="font" metaFont="system"/>
-                                                                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                                                    </textFieldCell>
-                                                                </textField>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="nuI-xn-2dn" firstAttribute="centerY" secondItem="bJd-xS-TCh" secondAttribute="centerY" id="1if-gA-PFl"/>
-                                                                <constraint firstItem="nuI-xn-2dn" firstAttribute="leading" secondItem="bJd-xS-TCh" secondAttribute="leading" constant="10" id="AjB-CB-W2k"/>
-                                                                <constraint firstAttribute="trailing" secondItem="nuI-xn-2dn" secondAttribute="trailing" constant="2" id="rKX-Ox-Imc"/>
-                                                            </constraints>
-                                                            <connections>
-                                                                <outlet property="textField" destination="nuI-xn-2dn" id="XyG-jd-xdr"/>
-                                                            </connections>
-                                                        </tableCellView>
-                                                    </prototypeCellViews>
-                                                </tableColumn>
-                                            </tableColumns>
-                                            <connections>
-                                                <outlet property="dataSource" destination="9Hh-1Z-vTn" id="JHl-WH-zOh"/>
-                                                <outlet property="delegate" destination="9Hh-1Z-vTn" id="D6m-vG-2Sz"/>
-                                            </connections>
-                                        </outlineView>
-                                    </subviews>
-                                    <nil key="backgroundColor"/>
-                                </clipView>
-                                <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="qxN-6b-8cn">
-                                    <rect key="frame" x="1" y="383" width="148" height="16"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                                <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="F9E-uu-ROX">
-                                    <rect key="frame" x="224" y="17" width="15" height="102"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </scroller>
-                            </scrollView>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="bottom" secondItem="cVW-QY-am4" secondAttribute="bottom" id="LgK-5a-cjE"/>
-                            <constraint firstItem="cVW-QY-am4" firstAttribute="leading" secondItem="OHa-lK-nre" secondAttribute="leading" id="btA-qF-JoE"/>
-                            <constraint firstAttribute="trailing" secondItem="cVW-QY-am4" secondAttribute="trailing" id="sZg-an-OtC"/>
-                            <constraint firstItem="cVW-QY-am4" firstAttribute="top" secondItem="OHa-lK-nre" secondAttribute="top" id="wRP-Vn-eKi"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="filterListView" destination="L4y-LK-hH3" id="rAk-PM-bbf"/>
-                    </connections>
-                </viewController>
-                <customObject id="VIv-HU-0Sj" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <controllerPlaceholder storyboardName="FilterList" id="09g-aA-dKs" sceneMemberID="viewController"/>
+                <customObject id="0aB-bH-2yo" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-125" y="1044"/>
+            <point key="canvasLocation" x="-118" y="908"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="UtI-3o-ePw">
