--- a/Fomalhaut2/Base.lproj/Book.storyboard
+++ b/Fomalhaut2/Base.lproj/Book.storyboard
@@ -69,6 +69,7 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="480" height="270"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="2880" height="1597"/>
+                        <value key="minSize" type="size" width="480" height="270"/>
                         <view key="contentView" id="zJK-LY-Y2f">
                             <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                             <autoresizingMask key="autoresizingMask"/>
