--- a/Fomalhaut2/WebSharingViewController.xib
+++ b/Fomalhaut2/WebSharingViewController.xib
@@ -6,7 +6,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="WebServerViewController" customModule="Fomalhaut2" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="WebSharingViewController" customModule="Fomalhaut2" customModuleProvider="target">
             <connections>
                 <outlet property="portTextField" destination="B90-KP-T5F" id="DOd-sm-saT"/>
                 <outlet property="toggleWebServerButton" destination="OJv-Cb-db7" id="91A-HV-Kqj"/>
